Item109: Changing TWikiTutorial to TwentyMinuteTutorial
git-svn-id: http://svn.foswiki.org/trunk@619 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -2203,10 +2203,10 @@ msgstr "Poslední editor"
 #: twikiplugins/ClassicSkin/templates/registernotify.classic.tmpl:10
 msgid ""
 "Read %1 to get a quick overview of this collaboration platform. To learn "
-"more, study the TWikiTutorial, which is accessible from the same link."
+"more, study the TwentyMinuteTutorial, which is accessible from the same link."
 msgstr ""
 "Přečtěte si prosím %1 aby jste získal přehled o této platformě ke "
-"spolupráci. Aby jste se naučil více, čtěte TWikiTutorial, který je odtud "
+"spolupráci. Aby jste se naučil více, čtěte TwentyMinuteTutorial, který je odtud "
 "přístupný."
 
 #: twikiplugins/PatternSkin/templates/edit.pattern.tmpl:27
