--- a/core/locale/es.po
+++ b/core/locale/es.po
@@ -2200,10 +2200,10 @@ msgstr "Editar código"
 #: twikiplugins/ClassicSkin/templates/registernotify.classic.tmpl:10
 msgid ""
 "Read %1 to get a quick overview of this collaboration platform. To learn "
-"more, study the TWikiTutorial, which is accessible from the same link."
+"more, study the TwentyMinuteTutorial, which is accessible from the same link."
 msgstr ""
 "Lea %1 para obtener una vista rápida de esta plataforma de colaboración. "
-"Para aprender más, estudie el TWikiTutorial, el cual está accesible en el "
+"Para aprender más, estudie el TwentyMinuteTutorial, el cual está accesible en el "
 "mismo enlace."
 
 #: twikiplugins/PatternSkin/templates/edit.pattern.tmpl:27
