--- a/core/locale/it.po
+++ b/core/locale/it.po
@@ -2187,10 +2187,10 @@ msgstr "Ultimo editore"
 #: twikiplugins/ClassicSkin/templates/registernotify.classic.tmpl:10
 msgid ""
 "Read %1 to get a quick overview of this collaboration platform. To learn "
-"more, study the TWikiTutorial, which is accessible from the same link."
+"more, study the TwentyMinuteTutorial, which is accessible from the same link."
 msgstr ""
 "Leggi %1 per avere una spiegazione veloce su questa piattaforma "
-"collaborativa. Per imparare di più studia il TWikiTutorial, che è "
+"collaborativa. Per imparare di più studia il TwentyMinuteTutorial, che è "
 "accessibile dallo steso link."
 
 #: twikiplugins/PatternSkin/templates/edit.pattern.tmpl:27
