--- a/core/locale/ja.po
+++ b/core/locale/ja.po
@@ -2151,10 +2151,10 @@ msgstr "ソースを編集"
 #: twikiplugins/ClassicSkin/templates/registernotify.classic.tmpl:10
 msgid ""
 "Read %1 to get a quick overview of this collaboration platform. To learn "
-"more, study the TWikiTutorial, which is accessible from the same link."
+"more, study the TwentyMinuteTutorial, which is accessible from the same link."
 msgstr ""
 "%1を読んで、このコラボレーションプラットフォームを大まかに理解してください。"
-"もっと沢山見たい場合は、%SYSTEMWEB%.TWikiTutorialを参照してください。"
+"もっと沢山見たい場合は、%SYSTEMWEB%.TwentyMinuteTutorialを参照してください。"
 
 #: twikiplugins/PatternSkin/templates/edit.pattern.tmpl:27
 msgid "Read new revision help text in new window"
