--- a/core/locale/bg.po
+++ b/core/locale/bg.po
@@ -2170,7 +2170,7 @@ msgstr ""
 #: twikiplugins/ClassicSkin/templates/registernotify.classic.tmpl:10
 msgid ""
 "Read %1 to get a quick overview of this collaboration platform. To learn "
-"more, study the TWikiTutorial, which is accessible from the same link."
+"more, study the TwentyMinuteTutorial, which is accessible from the same link."
 msgstr ""
 
 #: twikiplugins/PatternSkin/templates/edit.pattern.tmpl:27
