--- a/core/locale/de.po
+++ b/core/locale/de.po
@@ -2206,9 +2206,9 @@ msgstr "Quelltext editieren"
 #: twikiplugins/ClassicSkin/templates/registernotify.classic.tmpl:10
 msgid ""
 "Read %1 to get a quick overview of this collaboration platform. To learn "
-"more, study the TWikiTutorial, which is accessible from the same link."
+"more, study the TwentyMinuteTutorial, which is accessible from the same link."
 msgstr "Lesen Sie %1, um einen schnellen Überblick über die Kollaborations-Plattform "
-"zu bekommen. Für mehr Informationen lesen Sie das TWikiTutorial."
+"zu bekommen. Für mehr Informationen lesen Sie das TwentyMinuteTutorial."
 
 #: twikiplugins/PatternSkin/templates/edit.pattern.tmpl:27
 msgid "Read new revision help text in new window"
