--- a/core/locale/ru.po
+++ b/core/locale/ru.po
@@ -2265,10 +2265,10 @@ msgstr "Последнему кто редактировал"
 #: twikiplugins/ClassicSkin/templates/registernotify.classic.tmpl:10
 msgid ""
 "Read %1 to get a quick overview of this collaboration platform. To learn "
-"more, study the TWikiTutorial, which is accessible from the same link."
+"more, study the TwentyMinuteTutorial, which is accessible from the same link."
 msgstr ""
 "Прочтите %1 чтобы получить обзорное представление об этой платформе для "
-"организации совместной работы. Чтобы узнать больше, изучите TWikiTutorial, "
+"организации совместной работы. Чтобы узнать больше, изучите TwentyMinutesTutorial, "
 "доступный по той же ссылке."
 
 #: twikiplugins/PatternSkin/templates/edit.pattern.tmpl:27
