Item109: TWikiAdminGroup->WikiAdminGroup
git-svn-id: http://svn.foswiki.org/trunk@670 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/tools/pkg/debian/po/gl.po
+++ b/core/tools/pkg/debian/po/gl.po
@@ -99,10 +99,10 @@ msgstr "Precísase de configurar o rexistro do usuario administrador"
 #. Description
 #: ../templates:4001
 msgid ""
-"After you have created yourself a user, edit the Main.TWikiAdminGroup to "
+"After you have created yourself a user, edit the Main.WikiAdminGroup to "
 "restrict Admin privileges to that user."
 msgstr ""
-"Despois de ter creado un usuario, edite Main.TWikiAdminGroup para restrinxir "
+"Despois de ter creado un usuario, edite Main.WikiAdminGroup para restrinxir "
 "os privilexios de administración a ese usuario."
 
 #. Type: string
