--- a/core/tools/pkg/debian/po/pt.po
+++ b/core/tools/pkg/debian/po/pt.po
@@ -100,10 +100,10 @@ msgstr "É necessária a configuração do Registo do Utilizador"
 #. Description
 #: ../templates:4001
 msgid ""
-"After you have created yourself a user, edit the Main.TWikiAdminGroup to "
+"After you have created yourself a user, edit the Main.WikiAdminGroup to "
 "restrict Admin privileges to that user."
 msgstr ""
-"Após ter criado você mesmo um utilizador, edite Main.TWikiAdminGroup para "
+"Após ter criado você mesmo um utilizador, edite Main.WikiAdminGroup para "
 "restringir os privilégios de Administrador a esse utilizador."
 
 #. Type: string
