--- a/core/tools/pkg/debian/po/templates.pot
+++ b/core/tools/pkg/debian/po/templates.pot
@@ -87,7 +87,7 @@ msgstr ""
 #. Description
 #: ../templates:4001
 msgid ""
-"After you have created yourself a user, edit the Main.TWikiAdminGroup to "
+"After you have created yourself a user, edit the Main.WikiAdminGroup to "
 "restrict Admin privileges to that user."
 msgstr ""
 
